deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  labels:
    app: todo
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
